grammar/grammar.txt
program    → "{" top_level_stmt* export_stmt* "}"
function   → "func" IDENTIFIER "(" params? ")" block
params     → param ("," param)*
param      → ("ref" ":")? IDENTIFIER

block          → "{" statement_list "}"
statement_list → statement statement_list | ε

top_level_stmt →
      include_stmt 
    | alias_stmt
    | trait_stmt
    | class_stmt 
    | function

export_stmt → "export" "{" IDENTIFIER ("," IDENTIFIER)* "}" ";"

statement   →
      alias_stmt
    | return_stmt ";"
    | break_stmt ";"
    | continue_stmt ";"
    | assignment_stmt ";"
    | print_stmt ";"
    | println_stmt ";"
    | if_stmt
    | try_catch_stmt
    | for_stmt
    | while_stmt
    | block

alias_stmt
    →
    "alias" IDENTIFIER "=" include_stmt
    | "alias" IDENTIFIER "=" IDENTIFIER ";"

include_stmt 
    →
    "include"  IDENTIFIER ";"
    | "include" "<" IDENTIFIER ("," IDENTIFIER)* ">" "from" IDENTIFIER ";"

trait_stmt
    → "trait" IDENTIFIER "inherits" IDENTIFIER ("," IDENTIFIER)* "{" trait_section* "}"

trait_section
    → trait_access_modifers "{" trait_member* "}"
    | "shared" IDENTIFIER "=" expression ";"

trait_member
    → trait_method_decl

trait_method_decl
    → "dec" ":" IDENTIFIER "(" params? ")" ";"

trait_access_modifers
     →
        | "public"
        | "protected"


class_stmt
    →  "class" IDENTIFIER ("inherits" IDENTIFIER)? "{" section* "}" 
    |  "class" IDENTIFIER "impl" IDENTIFIER ("," IDENTIFIER)* "{" section* "}"

section
    → access_modifier "{" class_member* "}"
    | "shared" IDENTIFIER "=" expression ";"

access_modifier
    → "private"
    | "public"
    | "protected"

class_member
    → declaration
    | method_decl
    | method_def

declaration
    → "dec" ":" IDENTIFIER ";"

method_decl
    → "dec" ":" IDENTIFIER "(" params? ")" ";"

method_def
    → "func" IDENTIFIER "(" params? ")" block


return_stmt → "return" expression?
print_stmt     → "print" "(" string ")"
println_stmt   → "println "(" string ")"
break_stmt     → "break"
continue_stmt  → "continue"
if_stmt        → "if" "(" expression ")" block  else_part
else_part      → 
            "else" if_stmt 
            | "else" block
            | ε

try_catch_stmt
    → 
        "try" "{" block "}" ( "catch" "{" block "}" )* ( "finally" "{" block "}" )? 

assignment_stmt → assignment ("," assignment)*
assignment →
    lvalue assignment_op expression

lvalue
    → IDENTIFIER
    | primary "[" expression "]"
    
assignment_op →
      "="
    | "+=" | "-=" | "*=" | "/=" | "%="
    | "&=" | "|=" | "^="

for_stmt →
    "for" "(" assignment_stmt ";" expression ";" assignment_stmt ")" block

while_stmt ->
    "while" "(" expression")" block

expression      → logical_or

logical_or      → logical_and ( "||" logical_and )*

logical_and     → bitwise_or  ( "&&" bitwise_or )*

bitwise_or      → bitwise_xor ( "|" bitwise_xor )*

bitwise_xor     → bitwise_and ( "^" bitwise_and )*

bitwise_and     → equality    ( "&" equality )*

equality        → comparison  ( ("==" | "!=") comparison )*

comparison      → shift       ( ("<" | "<=" | ">" | ">=") shift )*

shift           → additive    ( ("<<" | ">>") additive )*

additive        → multiplicative ( ("+" | "-") multiplicative )*

multiplicative  → unary ( ("*" | "/" | "%") unary )*

unary           → ("!" | "-") unary | postfix

postfix         → primary postfix_op*

postfix_op      →
      "(" arguments? ")"
    | "[" expression "]"
    | "." IDENTIFIER

primary         →
      NUMBER
    | STRING
    | IDENTIFIER
    | "(" expression ")"
